# ESGI-OpenGL_Second

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp
src/core/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
src/shaders/: basic.frag  basic.glsl  basic.vert
src/util/: FileParser.cpp
